force-app/main/default/objects/Dealer_Advert__c/Dealer_Advert__c.object-meta.xml
<CustomObject>
    <label>Dealer / Advert</label>
    <nameField>
        <label>Dealer / Advert</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealers / Adverts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>