force-app/main/default/objects/Dealer_Advert__c/fields/AS400_ID__c.field-meta.xml
<CustomField>
    <fullName>AS400_ID__c</fullName>
    <inlineHelpText>Please add the Dealer code as a unique identifier</inlineHelpText>
    <label>Dealer ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>