force-app/main/default/objects/Dealer_Advert__c/fields/Commission_Paid__c.field-meta.xml
<CustomField>
    <fullName>Commission_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commission Paid</label>
    <type>Checkbox</type>
</CustomField>