force-app/main/default/objects/Dealer_Advert__c/fields/Dealer_Ad_Category__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Ad_Category__c</fullName>
    <label>Dealer/Ad Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certificated Site</fullName>
            </value>
            <value>
                <fullName>Club Sites</fullName>
            </value>
            <value>
                <fullName>Dealers</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Directories</fullName>
            </value>
            <value>
                <fullName>Exhibitions</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Member Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Referrals</fullName>
            </value>
            <value>
                <fullName>Social Camping</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Magazines</fullName>
            </value>
            <value>
                <fullName>Ex-Member</fullName>
                <isActive>false</isActive>
                <label>Ex-Member</label>
            </value>
            <value>
                <fullName>Search Engine</fullName>
                <isActive>false</isActive>
                <label>Search Engine</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>