force-app/main/default/objects/Dealer_Advert__c/fields/Level_One__c.field-meta.xml
<CustomField>
    <fullName>Level_One__c</fullName>
    <label>Level One</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Dealer_Ad_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Archive</fullName>
            </value>
            <value>
                <fullName>Billboards / Outdoor Poster</fullName>
            </value>
            <value>
                <fullName>Billboards or Service Stations</fullName>
            </value>
            <value>
                <fullName>Campsite Guides or Listings</fullName>
            </value>
            <value>
                <fullName>Campsite Listing on Internet (Not CCC)</fullName>
            </value>
            <value>
                <fullName>Campsite or Travel Service</fullName>
            </value>
            <value>
                <fullName>Caravan / Motorhome Dealership</fullName>
            </value>
            <value>
                <fullName>Club Care Insurance</fullName>
            </value>
            <value>
                <fullName>Club Product / Service</fullName>
            </value>
            <value>
                <fullName>Contact Centre Recommendation</fullName>
            </value>
            <value>
                <fullName>CS Adverts</fullName>
            </value>
            <value>
                <fullName>CS Free Membership</fullName>
            </value>
            <value>
                <fullName>DA / Region / Section</fullName>
            </value>
            <value>
                <fullName>Dealer Generic / Unknown</fullName>
            </value>
            <value>
                <fullName>Direct Mail - Generic / Unknown</fullName>
            </value>
            <value>
                <fullName>Directories - Generic / Unknown</fullName>
            </value>
            <value>
                <fullName>Email or Leaflet</fullName>
            </value>
            <value>
                <fullName>Enquiry Follow-Up</fullName>
            </value>
            <value>
                <fullName>European Campsites</fullName>
            </value>
            <value>
                <fullName>Exhibitions - Generic / Unknown</fullName>
            </value>
            <value>
                <fullName>Exhibitions or Shows / Event Campsite</fullName>
            </value>
            <value>
                <fullName>Ferry Crossing</fullName>
            </value>
            <value>
                <fullName>Franchise Site</fullName>
            </value>
            <value>
                <fullName>Gift Membership</fullName>
            </value>
            <value>
                <fullName>Holiday Home Owners Free Membership</fullName>
            </value>
            <value>
                <fullName>Insert in a magazine</fullName>
            </value>
            <value>
                <fullName>Internet Search</fullName>
            </value>
            <value>
                <fullName>Large Caravan / Motorhome Dealership</fullName>
            </value>
            <value>
                <fullName>Magazine or Newspaper</fullName>
            </value>
            <value>
                <fullName>Manoeuvring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>