force-app/main/default/objects/Dealer_Advert__c/fields/No_Monthly_Magazines__c.field-meta.xml
<CustomField>
    <fullName>No_Monthly_Magazines__c</fullName>
    <label>No. Monthly Magazines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>