force-app/main/default/objects/Dealer_Advert__c/fields/RT_Code__c.field-meta.xml
<CustomField>
    <fullName>RT_Code__c</fullName>
    <label>RT Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>