force-app/main/default/objects/Dealer_Advert__c/fields/Show_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Show_End_Date__c</fullName>
    <label>Show End Date</label>
    <type>Date</type>
</CustomField>