force-app/main/default/objects/Dealer_Advert__c/fields/Town_City__c.field-meta.xml
<CustomField>
    <fullName>Town_City__c</fullName>
    <label>Town/City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>