force-app/main/default/objects/Dealer_Advert__c/fields/Valid_Show__c.field-meta.xml
<CustomField>
    <fullName>Valid_Show__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid Show</label>
    <type>Checkbox</type>
</CustomField>