force-app/main/default/objects/Dealer_Advert__c/recordTypes/Advert.recordType-meta.xml
<RecordType>
    <fullName>Advert</fullName>
    <active>true</active>
    <label>Advert</label>
</RecordType>