force-app/main/default/objects/Dealer_Advert__c/listViews/Active_Dealers.listView-meta.xml
<ListView>
    <fullName>Active_Dealers</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Object_ID__c</columns>
    <columns>NAME</columns>
    <columns>Dealer_Ad_Category__c</columns>
    <columns>RT_Code__c</columns>
    <columns>Level_One__c</columns>
    <columns>AS400_ID__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Show_on_Website__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>club site</value>
    </filters>
    <label>Active Dealers</label>
</ListView>