force-app/main/default/objects/Dealer_Advert__c/listViews/Active_Shows.listView-meta.xml
<ListView>
    <fullName>Active_Shows</fullName>
    <columns>NAME</columns>
    <columns>Dealer_Ad_Category__c</columns>
    <columns>Level_One__c</columns>
    <columns>Show_Start_Date__c</columns>
    <columns>Show_End_Date__c</columns>
    <columns>Valid_Show__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Valid_Show__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Shows</label>
</ListView>