force-app/main/default/objects/Dealer_Advert__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RT_Code__c</columns>
    <columns>Dealer_Ad_Category__c</columns>
    <columns>Level_One__c</columns>
    <columns>Active__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Town_City__c</columns>
    <columns>Postcode__c</columns>
    <columns>No_Monthly_Magazines__c</columns>
    <columns>Show_on_Website__c</columns>
    <columns>Valid_Show__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Valid_Show__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Show_on_Website__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>