force-app/main/default/objects/Dealer_Advert__c/listViews/All_Dealers.listView-meta.xml
<ListView>
    <fullName>All_Dealers</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Dealer_Ad_Category__c</columns>
    <columns>Level_One__c</columns>
    <columns>RT_Code__c</columns>
    <columns>Show_on_Website__c</columns>
    <columns>Valid_Show__c</columns>
    <columns>No_Monthly_Magazines__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Dealer_Advert__c.Dealer</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>recomm</value>
    </filters>
    <label>All Dealers</label>
</ListView>