force-app/main/default/objects/Dealer_Advert__c/listViews/Campsite_Guide_Listing.listView-meta.xml
<ListView>
    <fullName>Campsite_Guide_Listing</fullName>
    <columns>NAME</columns>
    <columns>Dealer_Ad_Category__c</columns>
    <columns>Level_One__c</columns>
    <columns>RT_Code__c</columns>
    <columns>Active__c</columns>
    <columns>Commission_Paid__c</columns>
    <columns>Show_on_Website__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dealer_Ad_Category__c</field>
        <operation>equals</operation>
        <value>Directories</value>
    </filters>
    <label>Campsite Guide/Listing</label>
</ListView>