force-app/main/default/objects/Dealer_Advert__c/listViews/Certificated_Sites.listView-meta.xml
<ListView>
    <fullName>Certificated_Sites</fullName>
    <columns>NAME</columns>
    <columns>Contact_Name__c</columns>
    <columns>RT_Code__c</columns>
    <columns>Level_One__c</columns>
    <columns>Active__c</columns>
    <columns>Commission_Paid__c</columns>
    <columns>Show_on_Website__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dealer_Ad_Category__c</field>
        <operation>contains</operation>
        <value>Certificated Site</value>
    </filters>
    <label>Certificated Sites</label>
</ListView>