force-app/main/default/objects/Dealer_Advert__c/listViews/Club_Sites.listView-meta.xml
<ListView>
    <fullName>Club_Sites</fullName>
    <columns>NAME</columns>
    <columns>Dealer_Ad_Category__c</columns>
    <columns>Level_One__c</columns>
    <columns>RT_Code__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>No_Monthly_Magazines__c</columns>
    <columns>Show_on_Website__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dealer_Ad_Category__c</field>
        <operation>contains</operation>
        <value>Club Sites</value>
    </filters>
    <label>Club Sites</label>
</ListView>