force-app/main/default/objects/Dealer_Advert__c/listViews/Dealers.listView-meta.xml
<ListView>
    <fullName>Dealers</fullName>
    <columns>NAME</columns>
    <columns>RT_Code__c</columns>
    <columns>Level_One__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Postcode__c</columns>
    <columns>No_Monthly_Magazines__c</columns>
    <columns>Show_on_Website__c</columns>
    <columns>Commission_Paid__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dealer_Ad_Category__c</field>
        <operation>equals</operation>
        <value>Dealers</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Dealers</label>
</ListView>