force-app/main/default/objects/Dealer_Advert__c/listViews/Dealrs_Privilge_Customers.listView-meta.xml
<ListView>
    <fullName>Dealrs_Privilge_Customers</fullName>
    <columns>NAME</columns>
    <columns>RT_Code__c</columns>
    <columns>Level_One__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Postcode__c</columns>
    <columns>Active__c</columns>
    <columns>Commission_Paid__c</columns>
    <columns>Show_on_Website__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dealer_Ad_Category__c</field>
        <operation>equals</operation>
        <value>Dealers</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Level_One__c</field>
        <operation>equals</operation>
        <value>Privilege Customers</value>
    </filters>
    <label>Dealers - Privilege Customers</label>
</ListView>