force-app/main/default/objects/Dealer_Advert__c/listViews/Direct_Mail.listView-meta.xml
<ListView>
    <fullName>Direct_Mail</fullName>
    <columns>NAME</columns>
    <columns>Dealer_Ad_Category__c</columns>
    <columns>Level_One__c</columns>
    <columns>RT_Code__c</columns>
    <columns>Show_on_Website__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dealer_Ad_Category__c</field>
        <operation>equals</operation>
        <value>Direct Mail</value>
    </filters>
    <label>Direct Mail</label>
</ListView>