force-app/main/default/objects/Dealer_Advert__c/listViews/Exhibitions.listView-meta.xml
<ListView>
    <fullName>Exhibitions</fullName>
    <columns>NAME</columns>
    <columns>Show_Start_Date__c</columns>
    <columns>Show_End_Date__c</columns>
    <columns>Show_on_Website__c</columns>
    <columns>Valid_Show__c</columns>
    <columns>Active__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RT_Code__c</field>
        <operation>equals</operation>
        <value>10001,10002,10003,10004</value>
    </filters>
    <label>Exhibitions</label>
</ListView>