force-app/main/default/objects/Dealer_Advert__c/listViews/Franchise_Sites.listView-meta.xml
<ListView>
    <fullName>Franchise_Sites</fullName>
    <columns>NAME</columns>
    <columns>Dealer_Ad_Category__c</columns>
    <columns>Level_One__c</columns>
    <columns>RT_Code__c</columns>
    <columns>Active__c</columns>
    <columns>Commission_Paid__c</columns>
    <columns>No_Monthly_Magazines__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dealer_Ad_Category__c</field>
        <operation>equals</operation>
        <value>Club Sites</value>
    </filters>
    <filters>
        <field>Level_One__c</field>
        <operation>equals</operation>
        <value>Franchise Site</value>
    </filters>
    <label>Franchise Sites</label>
</ListView>