force-app/main/default/objects/Dealer_Advert__c/listViews/Inactive_Dealers.listView-meta.xml
<ListView>
    <fullName>Inactive_Dealers</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Dealer_Ad_Category__c</columns>
    <columns>Level_One__c</columns>
    <columns>RT_Code__c</columns>
    <columns>No_Monthly_Magazines__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Dealer_Advert__c.Dealer</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Dealers</label>
</ListView>